# tax_calculator

./: .gitignore  package-lock.json  pyproject.toml
calculator/: admin.py  forms.py  logic.py  models.py  urls.py  views.py
calculator/fixtures/calculator/: action.json  asset.json  backup.json  transaction.json
calculator/migrations/: 0001_initial.py  0002_remove_transaction_gain_loss_and_more.py  0003_rename_purchase_amount_transaction_amount.py  0004_rename_action_id_transaction_action_and_more.py  0005_transaction_is_sold.py  0006_remove_transaction_share_price_and_more.py  0007_remove_transaction_is_sold_alter_transaction_date.py  0008_alter_transaction_date.py
calculator/static/calculator/: custom.css  index.css
calculator/static/calculator/css/: custom.css  index.css
calculator/static/calculator/js/: app.js
calculator/templates/calculator/: index.html
tax_calculator/: settings.py  urls.py
