[build-system]
requires = ["poetry-core>=2.2.1"]
build-backend = "poetry.core.masonry.api"

[project]
name = "tax-calculator"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.2.7",
    "dotenv>=0.9.9",
    "mysqlclient>=2.2.7"
]

[project.optional-dependencies]
dev = ["ruff>=0.14.2"]
